--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "eslint-plugin-prefer-object-spread": "^1.2.1",
     "eslint-plugin-react": "^7.0.1",
     "expect.js": "^0.3.1"
+  },
+  "dependencies": {
+    "plotly.js": "1.45.3"
   }
+
 }
